Bugfix: Course facts had no left spacing

--- a/app/assets/less/components/_component_content_study.less
+++ b/app/assets/less/components/_component_content_study.less
@@ -357,7 +357,9 @@
 }
 
 .small(){
-
+  .study-course-facts{
+    margin: inherit;
+  }
 }
 .medium(){
 
